Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -136,3 +136,6 @@ UserNodeEditor.15=\u5e38\u89c4
 
 SubNodeEditor.0=\u5b50\u6d41\u7a0b\u73af\u8282\u5c5e\u6027
 SubNodeEditor.1=\u57fa\u672c
+
+MergeNodeEditor.0=\u5408\u5e76\u73af\u8282\u5c5e\u6027
+MergeNodeEditor.1=\u57fa\u672c
