--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -138,4 +138,6 @@ SubNodeEditor.0=\u5b50\u6d41\u7a0b\u73af\u8282\u5c5e\u6027
 SubNodeEditor.1=\u57fa\u672c
 
 MergeNodeEditor.0=\u5408\u5e76\u73af\u8282\u5c5e\u6027
-MergeNodeEditor.1=\u57fa\u672c
+MergeNodeEditor.1=\u5e38\u89c4
+MergeNodeEditor.2=\u57fa\u672c
+MergeNodeEditor.3=\u5408\u5e76\u8ba1\u6570
