Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -36,7 +36,13 @@ AEDPanel.1=\u4fee\u6539(E)
 AEDPanel.2=\u5220\u9664(D)
 AEDPanel.3=\u60a8\u786e\u5b9e\u60f3\u6267\u884c\u5220\u9664\u64cd\u4f5c\u5417\uff1f
 
+MainMenu.0=\u6587\u4ef6
+MainMenu.1=\u5e2e\u52a9
+
 ApplicationActions.0=\u65b0\u5efa\u8fde\u63a5
+
+SaveAsAction.0=\u53e6\u5b58\u4e3a...
+SaveAsAction.1=\u5f53\u524d\u6ca1\u6709\u6253\u5f00\u7684\u6587\u6863\uff01
 
 ConnectionDialog.0=\u8fde\u63a5\u540d\u79f0
 ConnectionDialog.1=\u8bf7\u8f93\u5165\u8fdc\u7a0b\u670d\u52a1\u5668\u7684\u5730\u5740
