--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -139,6 +139,7 @@ UserNodeEditor.12=\u624b\u52a8\u6a21\u5f0f
 UserNodeEditor.13=\u662f\u5426\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u53c2\u4e0e\u8005
 UserNodeEditor.14=\u8be5\u540d\u79f0\u201c{0}\u201d\u5df2\u88ab\u6682\u7528!
 UserNodeEditor.15=\u5e38\u89c4
+UserNodeEditor.16=\u8fc7\u671f\u65f6\u9650(\u5c0f\u65f6)
 
 SubNodeEditor.0=\u5b50\u6d41\u7a0b\u73af\u8282\u5c5e\u6027
 SubNodeEditor.1=\u57fa\u672c
