Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -148,4 +148,4 @@ SubNodeEditor.1=\u57fa\u672c
 MergeNodeEditor.0=\u5408\u5e76\u73af\u8282\u5c5e\u6027
 MergeNodeEditor.1=\u5e38\u89c4
 MergeNodeEditor.2=\u57fa\u672c
-MergeNodeEditor.3=\u5408\u5e76\u8ba1\u6570
+MergeNodeEditor.3=\u8ba1\u6570/\u6761\u4ef6
