Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -136,11 +136,14 @@ UserNodeEditor.9=\u54cd\u5e94\u6570
 UserNodeEditor.10=\u987a\u5e8f\u6267\u884c
 UserNodeEditor.11=\u5171\u4eab\u540c\u4e00\u4e2a\u4efb\u52a1\u5b9e\u4f8b
 UserNodeEditor.12=\u624b\u52a8\u6a21\u5f0f
-UserNodeEditor.13=\u662f\u5426\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u53c2\u4e0e\u8005
+UserNodeEditor.13=\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u53c2\u4e0e\u8005
 UserNodeEditor.14=\u8be5\u540d\u79f0\u201c{0}\u201d\u5df2\u88ab\u6682\u7528!
 UserNodeEditor.15=\u5e38\u89c4
 UserNodeEditor.16=\u8fc7\u671f\u65f6\u9650(\u5c0f\u65f6)
 UserNodeEditor.17=\u53c2\u6570
+UserNodeEditor.18=\u8def\u7531
+UserNodeEditor.19=\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u540e\u7eed\u8def\u7531(\u624b\u52a8\u6a21\u5f0f)
+UserNodeEditor.20=\u76f8\u5bf9\u5173\u7cfb\u9650\u5b9a\u5728\u540c\u4e00\u90e8\u95e8
 
 SubNodeEditor.0=\u5b50\u6d41\u7a0b\u73af\u8282\u5c5e\u6027
 SubNodeEditor.1=\u57fa\u672c
