--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -144,6 +144,7 @@ UserNodeEditor.17=\u53c2\u6570
 UserNodeEditor.18=\u8def\u7531
 UserNodeEditor.19=\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u540e\u7eed\u8def\u7531(\u624b\u52a8\u6a21\u5f0f)
 UserNodeEditor.20=\u76f8\u5bf9\u5173\u7cfb\u9650\u5b9a\u5728\u540c\u4e00\u90e8\u95e8
+UserNodeEditor.21=\u662f\u5426\u7a7a\u8282\u70b9
 
 SubNodeEditor.0=\u5b50\u6d41\u7a0b\u73af\u8282\u5c5e\u6027
 SubNodeEditor.1=\u57fa\u672c
