Signed-off-by: simpleframework <cknet@126.com>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -123,6 +123,8 @@ DescriptionPane.1=\u663e\u793a\u540d\u79f0
 DescriptionPane.2=\u63cf\u8ff0\u4fe1\u606f
 DescriptionPane.3=\u4ece\u6587\u4ef6\u4e2d\u88c5\u8f7d...(F)
 
+PropertiesPane.0=\u6269\u5c55\u5c5e\u6027
+
 UserNodeEditor.0=\u4ea4\u4e92\u73af\u8282\u5c5e\u6027
 UserNodeEditor.1=\u57fa\u672c
 UserNodeEditor.2=\u8868\u5355\u5b9e\u73b0\u7c7b
