Signed-off-by: CHENKAN <CHENKAN@CHENKAN-PC>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -78,12 +78,13 @@ ModelEditor.2=\u57fa\u672c
 ModelEditor.3=\u540d\u79f0(\u552f\u4e00)
 ModelEditor.4=\u7248\u672c
 ModelEditor.5=\u4f5c\u8005
-ModelEditor.6=\u8868\u5355\u5b9e\u73b0\u7c7b
+ModelEditor.6=\u5f85\u529e\u8868\u5355(\u5168\u5c40)
 ModelEditor.7=\u6d41\u7a0b\u5b9e\u4f8b\u5171\u4eab\u8be5\u6a21\u578b
 ModelEditor.8=\u542f\u52a8
 ModelEditor.9=\u542f\u52a8\u8005\u7c7b\u578b
 ModelEditor.10=\u542f\u52a8\u8005
 ModelEditor.11=\u7c7b\u578b
+ModelEditor.12=\u5f85\u9605\u8868\u5355
 
 StartNodeEditor.0=\u5f00\u59cb\u73af\u8282\u5c5e\u6027
 
@@ -127,7 +128,7 @@ PropertiesPane.0=\u6269\u5c55\u5c5e\u6027
 
 UserNodeEditor.0=\u4ea4\u4e92\u73af\u8282\u5c5e\u6027
 UserNodeEditor.1=\u57fa\u672c
-UserNodeEditor.2=\u8868\u5355\u5b9e\u73b0\u7c7b
+UserNodeEditor.2=\u5f85\u529e\u8868\u5355
 UserNodeEditor.3=\u53c2\u4e0e\u8005
 UserNodeEditor.4=\u7c7b\u578b
 UserNodeEditor.5=\u540d\u79f0
