Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -85,6 +85,7 @@ ModelEditor.9=\u542f\u52a8\u8005\u7c7b\u578b
 ModelEditor.10=\u542f\u52a8\u8005
 ModelEditor.11=\u7c7b\u578b
 ModelEditor.12=\u5f85\u9605\u8868\u5355
+ModelEditor.13=\u6392\u5e8f\u53f7
 
 StartNodeEditor.0=\u5f00\u59cb\u73af\u8282\u5c5e\u6027
 
