Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -101,6 +101,7 @@ TransitionEditor.4=\u903b\u8f91\u5173\u7cfb
 TransitionEditor.5=\u8def\u7531ID
 TransitionEditor.6=\u624b\u52a8\u65b9\u5f0f
 TransitionEditor.7=\u5b9e\u73b0\u7c7b
+TransitionEditor.8=\u6392\u5e8f\u53f7
 
 VariablePane.0=\u53d8\u91cf
 
