Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/workflow/modeler/message_zh_CN.properties
@@ -143,7 +143,7 @@ UserNodeEditor.10=\u987a\u5e8f\u6267\u884c
 UserNodeEditor.11=\u5171\u4eab\u540c\u4e00\u4e2a\u4efb\u52a1\u5b9e\u4f8b
 UserNodeEditor.12=\u624b\u52a8\u6a21\u5f0f
 UserNodeEditor.13=\u5141\u8bb8\u9009\u62e9\u591a\u4e2a\u53c2\u4e0e\u8005
-UserNodeEditor.14=\u8be5\u540d\u79f0\u201c{0}\u201d\u5df2\u88ab\u6682\u7528!
+UserNodeEditor.14=\u8be5\u540d\u79f0\u201c{0}\u201d\u5df2\u88ab\u6682\u7528！
 UserNodeEditor.15=\u5e38\u89c4
 UserNodeEditor.16=\u8fc7\u671f\u65f6\u9650(\u5c0f\u65f6)
 UserNodeEditor.17=\u53c2\u6570
